add:  find marked report, change: gpsx,y data type